БЭМ сделан начало верстки

--- a/index.html
+++ b/index.html
@@ -9,22 +9,21 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="images/logo.svg" class="logo" alt="Лого место в шапке">
+      <img src="images/logo.svg" class="header__logo" alt="Лого место в шапке">
+      <div class="header__line"></div>
     </header>
     <main class="content">
       <section class="profile">
-        <img src="images/Avatar.png" class="avatar" alt="Аватар профиля">
+        <img src="images/Avatar.png" class="profile__avatar" alt="Аватар профиля">
         <div class="profile-info">
-          <h1 class="nickname">Жак-Ив Кусто</h1>
-          <p class="profession">Исследоваетль океана</p>
-          <button class="edit-button">
-              <img src="images/pen.svg" class="edit-button__image" alt="Картинка с ручкой для окна редактирования профиля">
+          <h1 class="profile__nickname">Жак-Ив Кусто</h1>
+          <p class="profile__profession">Исследоваетль океана</p>
+          <button class="profile__button edite-button">
+              <img src="images/pen.svg" class="edite-button__image" alt="Картинка с ручкой для окна редактирования профиля">
           </button>
         </div>
-        <button class="add-button">
-          <div class="add-button__border">
-            <img src="images/Vector.svg" class="add-buton__image">
-          </div>
+        <button class="profile__button add-button">
+            <img src="images/Vector.svg" class="add-button__image">
         </button>
       </section>
 
@@ -34,8 +33,62 @@
           <h2 class="element__place-name">
             Карачаевск
           </h2>
-          <button>
-            <img src="" class="element__heart" alt="Кнопка нравится">
+          <button class="element__button">
+            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+          </button>
+        </div>
+        <div class="element">
+          <img src="" class="elemnt__image">
+          <h2 class="element__place-name">
+            Карачаевск
+          </h2>
+          <button class="element__button">
+            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+          </button>
+        </div>
+        <div class="element">
+          <img src="" class="elemnt__image">
+          <h2 class="element__place-name">
+            Карачаевск
+          </h2>
+          <button class="element__button">
+            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+          </button>
+        </div>
+        <div class="element">
+          <img src="" class="elemnt__image">
+          <h2 class="element__place-name">
+            Карачаевск
+          </h2>
+          <button class="element__button">
+            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+          </button>
+        </div>
+        <div class="element">
+          <img src="" class="elemnt__image">
+          <h2 class="element__place-name">
+            Карачаевск
+          </h2>
+          <button class="element__button">
+            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+          </button>
+        </div>
+        <div class="element">
+          <img src="" class="elemnt__image">
+          <h2 class="element__place-name">
+            Карачаевск
+          </h2>
+          <button class="element__button">
+            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+          </button>
+        </div>
+        <div class="element">
+          <img src="" class="elemnt__image">
+          <h2 class="element__place-name">
+            Карачаевск
+          </h2>
+          <button class="element__button">
+            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
           </button>
         </div>
       </section>
