--- a/index.html
+++ b/index.html
@@ -6,96 +6,94 @@
   <link rel="stylesheet" href="pages/index.css">
   <title>Mesto</title>
 </head>
-<body>
-  <div class="page">
-    <header class="header">
-      <img src="images/logo.svg" class="header__logo" alt="Лого место в шапке">
-      <div class="header__line"></div>
-    </header>
-    <main class="content">
-      <section class="profile">
-        <img src="images/Avatar.png" class="profile__avatar" alt="Аватар профиля">
-        <div class="profile-info">
-          <h1 class="profile__nickname">Жак-Ив Кусто</h1>
-          <p class="profile__profession">Исследоваетль океана</p>
-          <button class="profile__button edite-button">
-              <img src="images/pen.svg" class="edite-button__image" alt="Картинка с ручкой для окна редактирования профиля">
-          </button>
-        </div>
-        <button class="profile__button add-button">
-            <img src="images/Vector.svg" class="add-button__image">
+<body class="page">
+  <header class="header">
+    <img src="images/logo.svg" class="header__logo" alt="Лого место в шапке">
+    <div class="header__line"></div>
+  </header>
+  <main class="content">
+    <section class="profile">
+      <img src="images/Avatar.png" class="profile__avatar" alt="Аватар профиля">
+      <div class="profile-info">
+        <h1 class="profile__nickname">Жак-Ив Кусто</h1>
+        <p class="profile__profession">Исследоваетль океана</p>
+        <button class="profile__button edite-button">
+            <img src="images/pen.svg" class="edite-button__image" alt="Картинка с ручкой для окна редактирования профиля">
         </button>
-      </section>
+      </div>
+      <button class="profile__button add-button">
+          <img src="images/Vector.svg" class="add-button__image">
+      </button>
+    </section>
 
-      <section class="elements">
-        <div class="element">
-          <img src="" class="elemnt__image">
-          <h2 class="element__place-name">
-            Карачаевск
-          </h2>
-          <button class="element__button">
-            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-          </button>
-        </div>
-        <div class="element">
-          <img src="" class="elemnt__image">
-          <h2 class="element__place-name">
-            Карачаевск
-          </h2>
-          <button class="element__button">
-            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-          </button>
-        </div>
-        <div class="element">
-          <img src="" class="elemnt__image">
-          <h2 class="element__place-name">
-            Карачаевск
-          </h2>
-          <button class="element__button">
-            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-          </button>
-        </div>
-        <div class="element">
-          <img src="" class="elemnt__image">
-          <h2 class="element__place-name">
-            Карачаевск
-          </h2>
-          <button class="element__button">
-            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-          </button>
-        </div>
-        <div class="element">
-          <img src="" class="elemnt__image">
-          <h2 class="element__place-name">
-            Карачаевск
-          </h2>
-          <button class="element__button">
-            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-          </button>
-        </div>
-        <div class="element">
-          <img src="" class="elemnt__image">
-          <h2 class="element__place-name">
-            Карачаевск
-          </h2>
-          <button class="element__button">
-            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-          </button>
-        </div>
-        <div class="element">
-          <img src="" class="elemnt__image">
-          <h2 class="element__place-name">
-            Карачаевск
-          </h2>
-          <button class="element__button">
-            <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-          </button>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
-    </footer>
-  </div>
+    <section class="elements">
+      <div class="element">
+        <img src="" class="elemnt__image">
+        <h2 class="element__place-name">
+          Карачаевск
+        </h2>
+        <button class="element__button">
+          <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+        </button>
+      </div>
+      <div class="element">
+        <img src="" class="elemnt__image">
+        <h2 class="element__place-name">
+          Карачаевск
+        </h2>
+        <button class="element__button">
+          <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+        </button>
+      </div>
+      <div class="element">
+        <img src="" class="elemnt__image">
+        <h2 class="element__place-name">
+          Карачаевск
+        </h2>
+        <button class="element__button">
+          <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+        </button>
+      </div>
+      <div class="element">
+        <img src="" class="elemnt__image">
+        <h2 class="element__place-name">
+          Карачаевск
+        </h2>
+        <button class="element__button">
+          <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+        </button>
+      </div>
+      <div class="element">
+        <img src="" class="elemnt__image">
+        <h2 class="element__place-name">
+          Карачаевск
+        </h2>
+        <button class="element__button">
+          <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+        </button>
+      </div>
+      <div class="element">
+        <img src="" class="elemnt__image">
+        <h2 class="element__place-name">
+          Карачаевск
+        </h2>
+        <button class="element__button">
+          <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+        </button>
+      </div>
+      <div class="element">
+        <img src="" class="elemnt__image">
+        <h2 class="element__place-name">
+          Карачаевск
+        </h2>
+        <button class="element__button">
+          <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+        </button>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
+  </footer> 
 </body>
 </html>
