--- a/index.html
+++ b/index.html
@@ -28,67 +28,58 @@
 
     <section class="elements">
       <div class="element">
-        <img src="" class="elemnt__image">
-        <h2 class="element__place-name">
-          Карачаевск
-        </h2>
-        <button class="element__button">
+        <img src="images/kirill-pershin-1088404-unsplash.png" class="element__image">
+        <div class="element__footer">
+          <h2 class="element__place-name">
+            Карачаевск
+          </h2>
           <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-        </button>
+        </div>        
       </div>
       <div class="element">
-        <img src="" class="elemnt__image">
-        <h2 class="element__place-name">
-          Карачаевск
-        </h2>
-        <button class="element__button">
+        <img src="images/kirill-pershin-1404681-unsplash.png" class="element__image">
+        <div class="element__footer">
+          <h2 class="element__place-name">
+            Гора Эльбрус
+          </h2>
           <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-        </button>
+        </div>        
       </div>
       <div class="element">
-        <img src="" class="elemnt__image">
-        <h2 class="element__place-name">
-          Карачаевск
-        </h2>
-        <button class="element__button">
+        <img src="images/kirill-pershin-1556355-unsplash.png" class="element__image">
+        <div class="element__footer">
+          <h2 class="element__place-name">
+            Домбай
+          </h2>
           <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-        </button>
+        </div>
       </div>
       <div class="element">
-        <img src="" class="elemnt__image">
-        <h2 class="element__place-name">
-          Карачаевск
-        </h2>
-        <button class="element__button">
+        <img src="images/kirill-pershin-1404681-unsplash.png" class="element__image">
+        <div class="element__footer">
+          <h2 class="element__place-name">
+            Гора Эльбрус
+          </h2>
           <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-        </button>
+        </div>        
       </div>
       <div class="element">
-        <img src="" class="elemnt__image">
-        <h2 class="element__place-name">
-          Карачаевск
-        </h2>
-        <button class="element__button">
+        <img src="images/kirill-pershin-1556355-unsplash.png" class="element__image">
+        <div class="element__footer">
+          <h2 class="element__place-name">
+            Домбай
+          </h2>
           <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-        </button>
+        </div>
       </div>
       <div class="element">
-        <img src="" class="elemnt__image">
-        <h2 class="element__place-name">
-          Карачаевск
-        </h2>
-        <button class="element__button">
+        <img src="images/kirill-pershin-1088404-unsplash.png" class="element__image">
+        <div class="element__footer">
+          <h2 class="element__place-name">
+            Карачаево-Черкессия
+          </h2>
           <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-        </button>
-      </div>
-      <div class="element">
-        <img src="" class="elemnt__image">
-        <h2 class="element__place-name">
-          Карачаевск
-        </h2>
-        <button class="element__button">
-          <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-        </button>
+        </div>        
       </div>
     </section>
   </main>
