--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
   <title>Mesto</title>
 </head>
 <body class="page">
+  <div class="popup">
+    <div class="popup__overlay"></div>
+    <form class="popup__container">
+      <img src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+      <h2 class="popup__description">Редактировать профиль</h2>
+      <div class="fields">
+        <fieldset class="field">
+          <input type="text" class="field__input">
+          <div class="field__line"></div>
+        </fieldset>
+        <fieldset class="field">
+          <input type="text" class="field__input">
+          <div class="field__line"></div>
+        </fieldset>
+        <button class="submit-button"><p class="submit-button__text">Сохранить</p></button>
+      </div>
+    </form>
+  </div>
   <header class="header">
     <img src="images/logo.svg" class="header__logo" alt="Лого место в шапке">
     <div class="header__line"></div>
@@ -86,5 +104,8 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
   </footer> 
+
+
+  <img src="images/heart.svg" class="element__heart">
 </body>
 </html>
