--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
-  </footer> 
-
-
-  <img src="images/heart.svg" class="element__heart">
+  </footer>
+  <script src="body/edite-button/edite-button.js"></script> 
 </body>
 </html>
