--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           <input type="text" id="job" class="field__input">
           <div class="field__line"></div>
         </fieldset>
-        <button class="submit-button"><p class="submit-button__text">Сохранить</p></button>
+        <button class="submit-button">
+          <p class="submit-button__text">Сохранить</p>
+        </button>
       </form>
     </div>
   </div>
@@ -107,5 +109,6 @@
   <script src="scripts/add-button.js"></script>
   <script src="scripts/edite-button.js"></script> 
   <script src="scripts/popup__close-icon.js"></script>
+  <script src="scripts/submit-button.js"></script>
 </body>
 </html>
