--- a/index.html
+++ b/index.html
@@ -110,5 +110,6 @@
   <script src="scripts/edite-button.js"></script>
   <script src="scripts/popup__close-icon.js"></script>
   <script src="scripts/submit-button.js"></script>
+  <script src="scripts/fields.js"></script>
 </body>
 </html>
