--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body class="page">
   <div class="popup">
    <div class="popup__container">
-      <img src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+      <button type="button" class="popup__close-button">
+       <img src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+      </button>
       <h2 class="popup__description">Редактировать профиль</h2>
       <form class="fields">
         <fieldset class="field">
@@ -20,7 +22,7 @@
           <input type="text" id="job" class="field__input">
           <div class="field__line"></div>
         </fieldset>
-        <button class="submit-button">
+        <button type="submit" class="submit-button">
           <p class="submit-button__text">Сохранить</p>
         </button>
       </form>
@@ -36,18 +38,18 @@
       <div class="profile-info">
         <h1 class="profile__nickname">Жак-Ив Кусто</h1>
         <p class="profile__profession">Исследоваетль океана</p>
-        <button class="profile__button edite-button">
+        <button type="button" class="profile__button edite-button">
             <img src="images/pen.svg" class="edite-button__image" alt="Картинка с ручкой для окна редактирования профиля">
         </button>
       </div>
-      <button class="profile__button add-button">
-          <img src="images/Vector.svg" class="add-button__image">
+      <button type="button" class="profile__button add-button">
+          <img src="images/Vector.svg" class="add-button__image" alt="">
       </button>
     </section>
 
     <section class="elements">
       <div class="element">
-        <img src="images/kirill-pershin-1088404-unsplash.png" class="element__image">
+        <img src="images/kirill-pershin-1088404-unsplash.png" class="element__image" alt="">
         <div class="element__footer">
           <h2 class="element__place-name">
             Карачаевск
@@ -56,7 +58,7 @@
         </div>
       </div>
       <div class="element">
-        <img src="images/kirill-pershin-1404681-unsplash.png" class="element__image">
+        <img src="images/kirill-pershin-1404681-unsplash.png" class="element__image" alt="">
         <div class="element__footer">
           <h2 class="element__place-name">
             Гора Эльбрус
@@ -65,7 +67,7 @@
         </div>
       </div>
       <div class="element">
-        <img src="images/kirill-pershin-1556355-unsplash.png" class="element__image">
+        <img src="images/kirill-pershin-1556355-unsplash.png" class="element__image" alt="">
         <div class="element__footer">
           <h2 class="element__place-name">
             Домбай
@@ -74,7 +76,7 @@
         </div>
       </div>
       <div class="element">
-        <img src="images/kirill-pershin-1404681-unsplash.png" class="element__image">
+        <img src="images/kirill-pershin-1404681-unsplash.png" class="element__image" alt="">
         <div class="element__footer">
           <h2 class="element__place-name">
             Гора Эльбрус
@@ -83,7 +85,7 @@
         </div>
       </div>
       <div class="element">
-        <img src="images/kirill-pershin-1556355-unsplash.png" class="element__image">
+        <img src="images/kirill-pershin-1556355-unsplash.png" class="element__image" alt="">
         <div class="element__footer">
           <h2 class="element__place-name">
             Домбай
@@ -92,7 +94,7 @@
         </div>
       </div>
       <div class="element">
-        <img src="images/kirill-pershin-1088404-unsplash.png" class="element__image">
+        <img src="images/kirill-pershin-1088404-unsplash.png" class="element__image" alt="">
         <div class="element__footer">
           <h2 class="element__place-name">
             Карачаево-Черкессия
@@ -105,10 +107,6 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
   </footer>
-  <script src="scripts/add-button.js"></script>
-  <script src="scripts/edite-button.js"></script>
-  <script src="scripts/popup__close-icon.js"></script>
-  <script src="scripts/submit-button.js"></script>
-  <script src="scripts/fields.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
