--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       </button>
       <h2 class="popup__description">Редактировать профиль</h2>
       <form name="fields" class="fields">
-        <input name="name" type="text" id="name" class="field__input">
-        <input name="job" type="text" id="job" class="field__input">
+        <input name="name" type="text" id="name" class="fields__input">
+        <input name="job" type="text" id="job" class="fields__input">
         <button type="submit" class="popup__submit-button">
           Сохранить
         </button>
