--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <form name="fields" class="fields">
         <input name="name" type="text" id="name" class="fields__input">
         <input name="job" type="text" id="job" class="fields__input">
-        <button type="submit" class="popup__submit-button">
+        <button type="submit" class="fields__submit-button">
           Сохранить
         </button>
       </form>
@@ -24,7 +24,6 @@
   </div>
   <header class="header">
     <img src="images/logo.svg" class="header__logo" alt="Лого место в шапке">
-    <div class="header__line"></div>
   </header>
   <main class="content">
     <section class="profile">
