--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Mesto</title>
 </head>
 <body class="page">
-  <div class="popup">
+  <div id="profile" class="popup">
    <div class="popup__container">
       <button type="button" class="popup__close-button">
-       <img src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+       <img id="profile-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Редактировать профиль</h2>
       <form name="fields" class="fields">
@@ -20,7 +20,31 @@
           Сохранить
         </button>
       </form>
-    </div>
+   </div>
+  </div>
+  <div id="add" class="popup">
+   <div class="popup__container">
+      <button type="button" class="popup__close-button">
+       <img id="add-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+      </button>
+      <h2 class="popup__description">Новое место</h2>
+      <form name="fields" class="fields">
+        <input name="title" type="text" id="title" class="fields__input" placeholder="Название">
+        <input name="link" type="text" id="link" class="fields__input" placeholder="Ссылка на картинку">
+        <button type="submit" class="fields__submit-button">
+          Создать
+        </button>
+      </form>
+   </div>
+  </div>
+  <div id="image" class="popup">
+   <div class="popup__container">
+    <button type="button" class="popup__close-button">
+     <img id="add-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+    </button>
+    <img src="" class="popup__image" alt="Изображение в карточке">
+    <p class="popup__label"></p>
+   </div>
   </div>
   <header class="header">
     <img src="images/logo.svg" class="header__logo" alt="Лого место в шапке">
@@ -65,6 +89,9 @@
       </div>
       <div class="element">
         <img src="images/kirill-pershin-1556355-unsplash.png" class="element__image" alt="Пользовательское изображение">
+        <button type="button" class="element__trash">
+         <img src="images/Trash.svg" class="element__trash-image" alt="Иконка для удаления карточки">
+        </button>
         <div class="element__footer">
           <h2 class="element__place-name">
             Домбай
