--- a/index.html
+++ b/index.html
@@ -64,23 +64,24 @@
       </button>
     </section>
 
-    <section class="elements">
-      <div class="element">
-        <img src="images/kirill-pershin-1556355-unsplash.png" class="element__image" alt="Пользовательское изображение">
-        <button type="button" class="element__trash">
-         <img src="images/Trash.svg" class="element__trash-image" alt="Иконка для удаления карточки">
-        </button>
-        <div class="element__footer">
-          <h2 class="element__place-name">
-            Домбай
-          </h2>
-          <button type="button" class="element__like">
-           <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-          </button>
-        </div>
-      </div>
-    </section>
+    <section class="elements"></section>
   </main>
+
+  <template id="card-template">
+   <div class="element">
+    <img src="" class="element__image" alt="Пользовательское изображение">
+    <button type="button" class="element__trash">
+     <img src="images/Trash.svg" class="element__trash-image" alt="Иконка для удаления карточки">
+    </button>
+    <div class="element__footer">
+      <h2 class="element__place-name"></h2>
+      <button type="button" class="element__like">
+       <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
+      </button>
+    </div>
+   </div>
+  </template>
+
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
   </footer>
