--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <form name="fields" class="fields">
         <input name="name" type="text" id="name" class="fields__input">
         <input name="job" type="text" id="job" class="fields__input">
-        <button type="submit" class="fields__submit-button">
+        <button id="profile-button" type="submit" class="fields__submit-button">
           Сохранить
         </button>
       </form>
@@ -31,7 +31,7 @@
       <form name="fields" class="fields">
         <input name="title" type="text" id="title" class="fields__input" placeholder="Название">
         <input name="link" type="text" id="link" class="fields__input" placeholder="Ссылка на картинку">
-        <button type="submit" class="fields__submit-button">
+        <button id="add-button" type="submit" class="fields__submit-button">
           Создать
         </button>
       </form>
@@ -70,8 +70,8 @@
   <template id="card-template">
    <div class="element">
     <img src="" class="element__image" alt="Пользовательское изображение">
-    <button type="button" class="element__trash">
-     <img src="images/Trash.svg" class="element__trash-image" alt="Иконка для удаления карточки">
+    <button id="" type="button" class="element__trash">
+     <img src="images/Trash.svg" class="element__trash-image"  alt="Иконка для удаления карточки">
     </button>
     <div class="element__footer">
       <h2 class="element__place-name"></h2>
