--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       </form>
    </div>
   </div>
-  <div id="image" class="popup">
+  <div id="image" class="popup popup_opened">
    <div class="popup__container">
     <button type="button" class="popup__close-button">
      <img id="add-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
     </button>
-    <img src="" class="popup__image" alt="Изображение в карточке">
-    <p class="popup__label"></p>
+    <img src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" class="popup__image" alt="Изображение в карточке">
+    <p class="popup__label">Байкал</p>
    </div>
   </div>
   <header class="header">
