--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
    </div>
   </div>
   <div id="image" class="popup popup_opened">
-   <div class="popup__container">
+   <div class="popup__cont-img">
     <button type="button" class="popup__close-button">
-     <img id="add-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+     <img id="image-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
     </button>
     <img src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" class="popup__image" alt="Изображение в карточке">
     <p class="popup__label">Байкал</p>
