--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       </form>
    </div>
   </div>
-  <div id="image" class="popup popup_opened">
+  <div id="image" class="popup">
    <div class="popup__cont-img">
     <button type="button" class="popup__close-button">
      <img id="image-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
     </button>
-    <img src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" class="popup__image" alt="Изображение в карточке">
+    <img src="" class="popup__image" alt="Изображение в карточке">
     <p class="popup__label">Байкал</p>
    </div>
   </div>
@@ -75,9 +75,7 @@
     </button>
     <div class="element__footer">
       <h2 class="element__place-name"></h2>
-      <button type="button" class="element__like">
-       <img src="images/heart.svg" class="element__heart" alt="Кнопка нравится">
-      </button>
+      <button type="button" class="element__like"></button>
     </div>
    </div>
   </template>
