--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <button type="button" class="popup__close-button">
      <img id="image-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
     </button>
-    <img src="" class="popup__image" alt="Изображение в карточке">
+    <img src="." class="popup__image" alt="Изображение в карточке">
     <p class="popup__label">Байкал</p>
    </div>
   </div>
@@ -69,7 +69,7 @@
 
   <template id="card-template">
    <div class="element">
-    <img src="" class="element__image" alt="Пользовательское изображение">
+    <img src="." class="element__image" alt="Пользовательское изображение">
     <button id="" type="button" class="element__trash">
      <img src="images/Trash.svg" class="element__trash-image"  alt="Иконка для удаления карточки">
     </button>
