--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        <img id="add-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Новое место</h2>
-      <form name="fields" class="fields">
+      <form id="add-cards" name="fields" class="fields">
         <input name="title" type="text" id="title" class="fields__input" placeholder="Название">
         <input name="link" type="text" id="link" class="fields__input" placeholder="Ссылка на картинку">
         <button id="add-button" type="submit" class="fields__submit-button">
