--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
        <img id="profile-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Редактировать профиль</h2>
-      <form name="fields" class="fields">
-        <input name="name" type="text" id="name" class="fields__input">
-        <input name="job" type="text" id="job" class="fields__input">
+      <form name="fields" class="fields" novalidate>
+        <input name="name" type="text" id="name" class="fields__input" minlength="2" maxlength="40">
+        <span class="name-input-error fields__input-error"></span>
+        <input name="job" type="text" id="job" class="fields__input" minlength="2" maxlength="200">
+        <span class="job-input-error fields__input-error"></span>
         <button id="profile-button" type="submit" class="fields__submit-button">
           Сохранить
         </button>
@@ -28,9 +30,11 @@
        <img id="add-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Новое место</h2>
-      <form id="add-cards" name="fields" class="fields">
-        <input name="title" type="text" id="title" class="fields__input" placeholder="Название">
-        <input name="link" type="text" id="link" class="fields__input" placeholder="Ссылка на картинку">
+      <form id="add-cards" name="fields" class="fields" novalidate>
+        <input name="title" type="text" id="title" class="fields__input" placeholder="Название" minlength="2" maxlength="30">
+        <span class="title-input-error fields__input-error"></span>
+        <input name="link" type="url" id="link" class="fields__input" placeholder="Ссылка на картинку">
+        <span class="link-input-error fields__input-error"></span>
         <button id="add-button" type="submit" class="fields__submit-button">
           Создать
         </button>
