--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="popup__description">Редактировать профиль</h2>
       <form name="fields" class="fields" novalidate>
         <input name="name" type="text" id="name" class="fields__input" minlength="2" maxlength="40">
-        <span class="name-input-error fields__input-error">jkhj</span>
+        <span class="name-input-error fields__input-error"></span>
         <input name="job" type="text" id="job" class="fields__input" minlength="2" maxlength="200">
         <span class="job-input-error fields__input-error"></span>
         <button id="profile-button" type="submit" class="fields__submit-button">
@@ -88,5 +88,6 @@
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
   </footer>
   <script src="scripts/script.js"></script>
+  <!-- <script src="script/validate.js"></script> -->
 </body>
 </html>
