--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <img id="profile-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Редактировать профиль</h2>
-      <form name="fields" class="fields" novalidate>
+      <form id="profile-edite" name="fields" class="fields" novalidate>
         <input name="name" type="text" id="name" class="fields__input" minlength="2" maxlength="40">
         <span class="name-error fields__input-error"></span>
         <input name="job" type="text" id="job" class="fields__input" minlength="2" maxlength="200">
@@ -88,6 +88,6 @@
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
   </footer>
   <script src="scripts/script.js"></script>
-  <script src="script/validate.js"></script>
+  <script src="scripts/validate.js"></script>
 </body>
 </html>
