--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2 class="popup__description">Новое место</h2>
       <form id="add-cards" name="fields" class="fields" novalidate>
         <input name="title" type="text" id="title" class="fields__input" placeholder="Название" minlength="2" maxlength="30">
-        <span class="title-error fields__input-error"></span>
+        <span class="title-error fields__input-error">ssss</span>
         <input name="link" type="url" id="link" class="fields__input" placeholder="Ссылка на картинку">
         <span class="link-error fields__input-error"></span>
         <button id="add-button" type="submit" class="fields__submit-button">
