--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       </button>
       <h2 class="popup__description">Редактировать профиль</h2>
       <form id="profile-edite" name="fields" class="fields" novalidate>
-        <input name="name" type="text" id="name" class="fields__input" minlength="2" maxlength="40">
-        <span class="name-error fields__input-error"></span>
-        <input name="job" type="text" id="job" class="fields__input" minlength="2" maxlength="200">
-        <span class="job-error fields__input-error"></span>
+        <input name="name" type="text" id="name" class="fields__input" minlength="2" maxlength="40" required>
+        <span id="name-error" class="fields__input-error"></span>
+        <input name="job" type="text" id="job" class="fields__input" minlength="2" maxlength="200" required>
+        <span id="job-error" class="fields__input-error"></span>
         <button id="profile-button" type="submit" class="fields__submit-button">
           Сохранить
         </button>
@@ -31,10 +31,10 @@
       </button>
       <h2 class="popup__description">Новое место</h2>
       <form id="add-cards" name="fields" class="fields" novalidate>
-        <input name="title" type="text" id="title" class="fields__input" placeholder="Название" minlength="2" maxlength="30">
-        <span class="title-error fields__input-error">ssss</span>
-        <input name="link" type="url" id="link" class="fields__input" placeholder="Ссылка на картинку">
-        <span class="link-error fields__input-error"></span>
+        <input name="title" type="text" id="title" class="fields__input" placeholder="Название" minlength="2" maxlength="30" required>
+        <span id="title-error" class="fields__input-error"></span>
+        <input name="link" type="url" id="link" class="fields__input" required placeholder="Ссылка на картинку">
+        <span id="link-error" class="fields__input-error"></span>
         <button id="add-button" type="submit" class="fields__submit-button">
           Создать
         </button>
