--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <img id="profile-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Редактировать профиль</h2>
-      <form id="profile-edite" name="fields" class="fields" novalidate>
+      <form id="profile-edite" name="profile-fields" class="fields" novalidate>
         <input name="name" type="text" id="name" class="fields__input" minlength="2" maxlength="40" required>
         <span id="name-error" class="fields__input-error"></span>
         <input name="job" type="text" id="job" class="fields__input" minlength="2" maxlength="200" required>
@@ -30,7 +30,7 @@
        <img id="add-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Новое место</h2>
-      <form id="add-cards" name="fields" class="fields" novalidate>
+      <form id="add-cards" name="add-fields" class="fields" novalidate>
         <input name="title" type="text" id="title" class="fields__input" placeholder="Название" minlength="2" maxlength="30" required>
         <span id="title-error" class="fields__input-error"></span>
         <input name="link" type="url" id="link" class="fields__input" required placeholder="Ссылка на картинку">
