--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
   </footer>
-  <script src="scripts/script.js"></script>
+  <script src="./scripts/index.js"></script>
+  <!-- <script src="scripts/script.js"></script> -->
   <script src="scripts/validate.js"></script>
 </body>
 </html>
