--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
   </footer>
-  <script src="./scripts/index.js"></script>
-  <!-- <script src="scripts/script.js"></script> -->
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="scripts/script.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
   <script src="scripts/validate.js"></script>
 </body>
 </html>
