--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
   </footer>
   <script type="module" src="./scripts/index.js"></script>
-  <script type="module" src="scripts/script.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
   <script type="module" src="./scripts/FormValidator.js"></script>
   <script src="scripts/validate.js"></script>
 </body>
