--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
      <img id="image-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
     </button>
     <img src="." class="popup__image" alt="Изображение в карточке">
-    <p class="popup__label">Байкал</p>
+    <p class="popup__label"></p>
    </div>
   </div>
   <header class="header">
