--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="pages/index.css">
   <title>Mesto</title>
 </head>
 <body class="page">
   <div id="profile" class="popup">
    <div class="popup__container">
       <button type="button" class="popup__close-button">
-       <img id="profile-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+       <img id="profile-closed" src="%=require('images/Close_Icon.svg')%" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Редактировать профиль</h2>
       <form id="profile-edite" name="profile-fields" class="fields" novalidate>
@@ -27,7 +26,7 @@
   <div id="add" class="popup">
    <div class="popup__container">
       <button type="button" class="popup__close-button">
-       <img id="add-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+       <img id="add-closed" src="%=require('images/Close_Icon.svg')%" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Новое место</h2>
       <form id="add-cards" name="add-fields" class="fields" novalidate>
@@ -44,27 +43,27 @@
   <div id="image" class="popup">
    <div class="popup__cont-img">
     <button type="button" class="popup__close-button">
-     <img id="image-closed" src="images/Close_Icon.svg" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+     <img id="image-closed" src="%=require('images/Close_Icon.svg')%" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
     </button>
     <img src="." class="popup__image" alt="Изображение в карточке">
     <p class="popup__label"></p>
    </div>
   </div>
   <header class="header">
-    <img src="images/logo.svg" class="header__logo" alt="Лого место в шапке">
+    <img src="%=require('images/logo.svg')%" class="header__logo" alt="Лого место в шапке">
   </header>
   <main class="content">
     <section class="profile">
-      <img src="images/Avatar.png" class="profile__avatar" alt="Аватар профиля">
+      <img src="%=require('images/Avatar.png')%" class="profile__avatar" alt="Аватар профиля">
       <div class="profile__info">
         <h1 class="profile__nickname">Жак-Ив Кусто</h1>
         <p class="profile__profession">Исследователь океана</p>
         <button type="button" class="profile__button-edite">
-            <img src="images/pen.svg" class="profile__image-edite" alt="Картинка с ручкой для окна редактирования профиля">
+            <img src="%=require('images/pen.svg')%" class="profile__image-edite" alt="Картинка с ручкой для окна редактирования профиля">
         </button>
       </div>
       <button type="button" class="profile__button-add">
-          <img src="images/Vector.svg" class="profile__image-add" alt="Картинка с плюсиком">
+          <img src="%=require('images/Vector.svg')%" class="profile__image-add" alt="Картинка с плюсиком">
       </button>
     </section>
 
@@ -75,7 +74,7 @@
    <div class="element">
     <img src="." class="element__image" alt="Пользовательское изображение">
     <button id="" type="button" class="element__trash">
-     <img src="images/Trash.svg" class="element__trash-image"  alt="Иконка для удаления карточки">
+     <img src="%=require('images/Trash.svg')%" class="element__trash-image"  alt="Иконка для удаления карточки">
     </button>
     <div class="element__footer">
       <h2 class="element__place-name"></h2>
