--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <div id="profile" class="popup">
    <div class="popup__container">
       <button type="button" class="popup__close-button">
-       <img id="profile-closed" src="%=require('images/Close_Icon.svg')%" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+       <img id="profile-closed" src="<%=require('./images/Close_Icon.svg')%>" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Редактировать профиль</h2>
       <form id="profile-edite" name="profile-fields" class="fields" novalidate>
@@ -26,7 +26,7 @@
   <div id="add" class="popup">
    <div class="popup__container">
       <button type="button" class="popup__close-button">
-       <img id="add-closed" src="%=require('images/Close_Icon.svg')%" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+       <img id="add-closed" src="<%=require('./images/Close_Icon.svg')%>" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
       </button>
       <h2 class="popup__description">Новое место</h2>
       <form id="add-cards" name="add-fields" class="fields" novalidate>
@@ -43,27 +43,27 @@
   <div id="image" class="popup">
    <div class="popup__cont-img">
     <button type="button" class="popup__close-button">
-     <img id="image-closed" src="%=require('images/Close_Icon.svg')%" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+     <img id="image-closed" src="<%=require('./images/Close_Icon.svg')%>" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
     </button>
     <img src="." class="popup__image" alt="Изображение в карточке">
     <p class="popup__label"></p>
    </div>
   </div>
   <header class="header">
-    <img src="%=require('images/logo.svg')%" class="header__logo" alt="Лого место в шапке">
+    <img src="<%=require('./images/logo.svg')%>" class="header__logo" alt="Лого место в шапке">
   </header>
   <main class="content">
     <section class="profile">
-      <img src="%=require('images/Avatar.png')%" class="profile__avatar" alt="Аватар профиля">
+      <img src="<%=require('./images/Avatar.png')%>" class="profile__avatar" alt="Аватар профиля">
       <div class="profile__info">
         <h1 class="profile__nickname">Жак-Ив Кусто</h1>
         <p class="profile__profession">Исследователь океана</p>
         <button type="button" class="profile__button-edite">
-            <img src="%=require('images/pen.svg')%" class="profile__image-edite" alt="Картинка с ручкой для окна редактирования профиля">
+            <img src="<%=require('./images/pen.svg')%>" class="profile__image-edite" alt="Картинка с ручкой для окна редактирования профиля">
         </button>
       </div>
       <button type="button" class="profile__button-add">
-          <img src="%=require('images/Vector.svg')%" class="profile__image-add" alt="Картинка с плюсиком">
+          <img src="<%=require('./images/Vector.svg')%>" class="profile__image-add" alt="Картинка с плюсиком">
       </button>
     </section>
 
@@ -74,7 +74,7 @@
    <div class="element">
     <img src="." class="element__image" alt="Пользовательское изображение">
     <button id="" type="button" class="element__trash">
-     <img src="%=require('images/Trash.svg')%" class="element__trash-image"  alt="Иконка для удаления карточки">
+     <img src="<%=require('./images/Trash.svg')%>" class="element__trash-image"  alt="Иконка для удаления карточки">
     </button>
     <div class="element__footer">
       <h2 class="element__place-name"></h2>
@@ -86,6 +86,5 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
   </footer>
-  <script type="module" src="./pages/index.js"></script>
 </body>
 </html>
