--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Mesto</title>
 </head>
 <body class="page">
+
   <div id="profile" class="popup">
    <div class="popup__container">
       <button type="button" class="popup__close-button">
@@ -23,6 +24,7 @@
       </form>
    </div>
   </div>
+
   <div id="add" class="popup">
    <div class="popup__container">
       <button type="button" class="popup__close-button">
@@ -40,6 +42,7 @@
       </form>
    </div>
   </div>
+
   <div id="image" class="popup">
    <div class="popup__cont-img">
     <button type="button" class="popup__close-button">
@@ -50,7 +53,7 @@
    </div>
   </div>
 
-  <div id="delete-card" class="popup popup_opened">
+  <div id="delete-card" class="popup">
     <div class="popup__container">
      <button type="button" class="popup__close-button">
       <img id="image-closed" src="<%=require('./images/Close_Icon.svg')%>" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
@@ -63,12 +66,31 @@
      </form>
     </div>
    </div>
+
+   <div id="avatar-update" class="popup">
+    <div class="popup__container">
+       <button type="button" class="popup__close-button">
+        <img id="profile-closed" src="<%=require('./images/Close_Icon.svg')%>" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+       </button>
+       <h2 class="popup__description">Обновить аватар</h2>
+       <form id="avatar-edite" name="avatar-fields" class="fields" novalidate>
+         <input name="link-to-avatar" type="url" id="link-to-avatar" class="fields__input" required>
+         <span id="name-error" class="fields__input-error"></span>
+         <button id="profile-button" type="submit" class="fields__submit-button">
+           Сохранить
+         </button>
+       </form>
+    </div>
+   </div>
+
   <header class="header">
     <img src="<%=require('./images/logo.svg')%>" class="header__logo" alt="Лого место в шапке">
   </header>
   <main class="content">
     <section class="profile">
-      <img src="<%=require('./images/Avatar.png')%>" class="profile__avatar" alt="Аватар профиля">
+     <div class="profile__avatar">
+      <button class="profile__button-edite-avatar"></button>
+     </div>
       <div class="profile__info">
         <h1 class="profile__nickname">Жак-Ив Кусто</h1>
         <p class="profile__profession">Исследователь океана</p>
@@ -92,7 +114,10 @@
     </button>
     <div class="element__footer">
       <h2 class="element__place-name"></h2>
-      <button type="button" class="element__like"></button>
+      <div class="element__like-container">
+       <button type="button" class="element__like"></button>
+       <p class="element__like-counter">1</p>
+      </div>
     </div>
    </div>
   </template>
