--- a/src/index.html
+++ b/src/index.html
@@ -74,8 +74,8 @@
        </button>
        <h2 class="popup__description">Обновить аватар</h2>
        <form id="avatar-edite" name="avatar-fields" class="fields" novalidate>
-         <input name="link-to-avatar" type="url" id="link-to-avatar" class="fields__input" required>
-         <span id="name-error" class="fields__input-error"></span>
+         <input name="avatar" type="url" id="avatar" class="fields__input" required>
+         <span id="avatar-error" class="fields__input-error"></span>
          <button id="profile-button" type="submit" class="fields__submit-button">
            Сохранить
          </button>
@@ -89,7 +89,7 @@
   <main class="content">
     <section class="profile">
      <div class="profile__avatar">
-      <button class="profile__button-edite-avatar"></button>
+      <button type="button" class="profile__button-edite-avatar"></button>
      </div>
       <div class="profile__info">
         <h1 class="profile__nickname">Жак-Ив Кусто</h1>
