--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
        </button>
        <h2 class="popup__description">Обновить аватар</h2>
        <form id="avatar-edite" name="avatar-fields" class="fields" novalidate>
-         <input name="avatar" type="url" id="avatar" class="fields__input" required>
+         <input name="avatar" type="url" id="avatar" class="fields__input" placeholder="Ссылка на картинку" required>
          <span id="avatar-error" class="fields__input-error"></span>
          <button id="profile-button" type="submit" class="fields__submit-button">
            Сохранить
@@ -116,7 +116,7 @@
       <h2 class="element__place-name"></h2>
       <div class="element__like-container">
        <button type="button" class="element__like"></button>
-       <p class="element__like-counter">1</p>
+       <p class="element__like-counter">0</p>
       </div>
     </div>
    </div>
