--- a/src/index.html
+++ b/src/index.html
@@ -92,8 +92,8 @@
       <button type="button" class="profile__button-edite-avatar"></button>
      </div>
       <div class="profile__info">
-        <h1 class="profile__nickname">Жак-Ив Кусто</h1>
-        <p class="profile__profession">Исследователь океана</p>
+        <h1 class="profile__nickname"></h1>
+        <p class="profile__profession"></p>
         <button type="button" class="profile__button-edite">
             <img src="<%=require('./images/pen.svg')%>" class="profile__image-edite" alt="Картинка с ручкой для окна редактирования профиля">
         </button>
