--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
       <form id="profile-edite" name="profile-fields" class="fields" novalidate>
         <input name="name" type="text" id="name" class="fields__input" minlength="2" maxlength="40" required>
         <span id="name-error" class="fields__input-error"></span>
-        <input name="job" type="text" id="job" class="fields__input" minlength="2" maxlength="200" required>
-        <span id="job-error" class="fields__input-error"></span>
+        <input name="about" type="text" id="about" class="fields__input" minlength="2" maxlength="200" required>
+        <span id="about-error" class="fields__input-error"></span>
         <button id="profile-button" type="submit" class="fields__submit-button">
           Сохранить
         </button>
