--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
        <form id="avatar-edite" name="avatar-fields" class="fields" novalidate>
          <input name="avatar" type="url" id="avatar" class="fields__input" placeholder="Ссылка на картинку" required>
          <span id="avatar-error" class="fields__input-error"></span>
-         <button id="profile-button" type="submit" class="fields__submit-button">
+         <button id="avatar-button" type="submit" class="fields__submit-button">
            Сохранить
          </button>
        </form>
