--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
    <div id="avatar-update" class="popup">
     <div class="popup__container">
        <button type="button" class="popup__close-button">
-        <img id="profile-closed" src="<%=require('./images/Close_Icon.svg')%>" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+        <img src="<%=require('./images/Close_Icon.svg')%>" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
        </button>
        <h2 class="popup__description">Обновить аватар</h2>
        <form id="avatar-edite" name="avatar-fields" class="fields" novalidate>
